<resources>
    <string name="app_name">Business App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_app_developer">Mobile App Developer</string>
    <string name="name">Eyad Yehia</string>
    <string name="button1">Work</string>
    <string name="email_1">eyadyehiaa7@gmail.com</string>
    <string name="email_2">E.Yehia2131@nu.edu.eg</string>
    <string name="num">+2001090421535</string>
    <string name="content_description">Eyad\'s Image</string>
    <string name="landing_page">Landing Page</string>
</resources>