<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentOne"
    android:background="@drawable/galaxy"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/eyad"
        android:contentDescription="@string/content_description"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,1:1"
        android:layout_marginTop="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:src="@drawable/whatsapp_image_2024_04_11_at_15_04_57_5be5faf3"
        />
    <TextView
        android:id="@+id/name"
        android:text="@string/name"
        android:textColor="@color/cardview_light_background"
        android:fontFamily="@font/akiraexpanded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/eyad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/title"
        android:text="@string/mobile_app_developer"
        android:textColor="@color/cardview_light_background"
        android:fontFamily="@font/akiraexpanded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <Button
        android:id="@+id/Work"
        android:text="@string/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/num"
        android:text="@string/num"
        android:textColor="@color/cardview_light_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@id/email1"/>

    <TextView
        android:id="@+id/email1"
        android:text="@string/email_1"
        android:fontFamily=""
        android:textColor="@color/cardview_light_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gmail_icon"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/email2"
        android:text="@string/email_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@id/email1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

<ImageView
    android:id="@+id/phone_icon"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:src="@drawable/phone_solid"
    android:background="@color/material_dynamic_primary30"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/num"
    android:layout_marginTop="520dp"
    android:layout_marginStart="100dp"
    app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/gmail_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/gmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/num"
        app:layout_constraintTop_toBottomOf="@+id/phone_icon"
        android:layout_marginStart="100dp"
        />
    <ImageView
        android:id="@+id/outlook_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/icons8_outlook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/num"
        app:layout_constraintTop_toBottomOf="@+id/gmail_icon"
        android:layout_marginStart="100dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>